--- a/css/calendar-grid.css
+++ b/css/calendar-grid.css
@@ -2,8 +2,8 @@ body {
   margin: 0; }
 
 .calendar {
-  height: 100vh;
   width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column; }
   .calendar h3 {
@@ -29,18 +29,38 @@ body {
     flex-grow: 1;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: 1fr 1fr 1fr 1fr; }
+    grid-template-rows: repeat(5, 1fr); }
     .calendar .month div {
       background: lightgrey;
       border: 1px solid white;
       grid-column: auto / auto;
       grid-row: auto / auto;
       margin: 0;
-      padding: 0; }
+      position: relative; }
+      .calendar .month div .day {
+        color: teal;
+        font-size: 1em;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 5px; }
       .calendar .month div.first-day-of-month {
         grid-column: 5; }
       .calendar .month div.fill-start {
         grid-column-start: 1;
-        grid-column-end: 5; }
+        grid-column-end: 5;
+        padding: 15px; }
+
+@media only screen and (max-width: 600px) {
+  .calendar {
+    height: auto;
+    width: 100%; }
+    .calendar .days {
+      display: none; }
+    .calendar .month {
+      display: flex;
+      flex-direction: column; }
+      .calendar .month div {
+        min-height: 45px; } }
 
 /*# sourceMappingURL=calendar-grid.css.map */
