--- a/css/calendar-grid.css
+++ b/css/calendar-grid.css
@@ -3,7 +3,7 @@ body {
   background: darkslateblue; }
 
 .calendar {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column; }
   .calendar h3 {
@@ -23,8 +23,6 @@ body {
       border: 1px solid white;
       margin: 0;
       padding: 0; }
-    .calendar .days span {
-      display: none; }
   .calendar .month {
     flex-grow: 1;
     display: grid;
@@ -74,7 +72,10 @@ body {
           box-sizing: border-box;
           overflow: auto; }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 520px) {
+  .days p span {
+    display: none; } }
+@media only screen and (max-width: 300px) {
   .calendar {
     height: auto;
     width: 100%; }
@@ -89,7 +90,8 @@ body {
         .calendar .month > div .day {
           height: auto;
           position: relative;
-          font-size: 1.5em; }
+          font-size: 1.5em;
+          padding: 15px; }
         .calendar .month > div.fill-start > div {
           position: relative; }
     .calendar .content {
